# radar_lamp

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
hardware/kicad/radar_lamp/: fp-lib-table  radar_lamp.kicad_pcb  radar_lamp.kicad_pro  radar_lamp.kicad_sch  sym-lib-table
include/: example_bring_up.h  example_cargo_main.h  example_control_helper.h  example_detector_distance.h  example_detector_distance_calibration_caching.h  example_detector_distance_with_iq_data_print.h  example_detector_presence.h  example_detector_presence_multiple_configurations.h  example_detector_presence_with_iq_data_print.h  example_diagnostic_test.h  example_hand_motion_detection_main.h  example_processing_amplitude.h  example_processing_coherent_mean.h  example_processing_noncoherent_mean.h  example_processing_peak_interpolation.h  example_processing_static_presence.h  example_processing_subtract_adaptive_bg.h  example_service.h  example_service_calibration_caching.h  example_service_multiple_configurations.h  example_service_sensor_hibernate.h  example_service_subsweeps.h  example_surface_velocity.h  example_vibration_main.h  example_waste_level_main.h  ref_app_breathing_main.h  ref_app_parking_main.h  ref_app_smart_presence.h  ref_app_tank_level.h  ref_app_touchless_button.h
main/: CMakeLists.txt  acc_hal_integration_espidf_xe121.c  acc_integration_esp32.c  led_dimmer.c  led_dimmer.h  main.c
